# SlicerTotalSpineSeg

./: .gitignore  CMakeLists.txt  README.md
TotalSpineSeg/: CMakeLists.txt  TotalSpineSeg.py
TotalSpineSeg/Resources/: SegmentationCategoryTypeModifier-TotalSpineSeg.term.json  totalspineseg_snomed_mapping.csv
TotalSpineSeg/Resources/UI/: TotalSpineSeg.ui
TotalSpineSeg/Testing/Python/: CMakeLists.txt
